--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-vlc-media-player",
+  "name": "@safastak/react-native-vlc-media-player",
   "version": "1.0.87",
   "description": "React native media player for video streaming and playing. Supports RTSP,RTMP and other protocols supported by VLC player",
   "main": "index.js",
@@ -34,6 +34,9 @@
   "devDependencies": {
     "@expo/config-plugins": "^7.2.2",
     "@types/react": "~18.2.14"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "typings": "index.d.ts"
 }
